@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 // ================================================================
 //  FILE: src/main/java/lk/school/admission/service/AdminService.java
 //
@@ -7,8 +6,13 @@
 // ================================================================
 package lk.school.admission.service;
 
-import lk.school.admission.entity.*;
-import lk.school.admission.repository.*;
+import lk.school.admission.entity.Application;
+import lk.school.admission.entity.ApplicationCategory;
+import lk.school.admission.entity.Judge;
+import lk.school.admission.repository.apps.ApplicationRepository;
+import lk.school.admission.repository.apps.ParentRepository;
+import lk.school.admission.repository.system.JudgeRepository;
+import lk.school.admission.repository.system.SystemUserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,14 +23,16 @@ import java.util.stream.Collectors;
 @Service
 public class AdminService {
 
-    @Autowired private ApplicationRepository applicationRepo;
+    @Autowired private ApplicationRepository appRepo;
     @Autowired private ParentRepository      parentRepo;
     @Autowired private JudgeRepository       judgeRepo;
     @Autowired private SystemUserRepository  systemUserRepo;
 
-    // ── Dashboard Summary Stats ───────────────────────────────
+    // ── Dashboard stats ───────────────────────────────────────
+
+    @Transactional(value = "appsTransactionManager", readOnly = true)
     public Map<String, Object> getDashboardStats() {
-        List<Application> all = applicationRepo.findAll();
+        List<Application> all = appRepo.findAll();
 
         Map<String, Object> stats = new LinkedHashMap<>();
         stats.put("totalApplications", all.size());
@@ -35,99 +41,89 @@ public class AdminService {
 
         // Count by status
         Map<String, Long> byStatus = new LinkedHashMap<>();
-        for (ApplicationStatus s : ApplicationStatus.values()) {
-            long count = all.stream().filter(a -> a.getStatus() == s).count();
-            if (count > 0) byStatus.put(s.name(), count);
-        }
+        all.stream().collect(Collectors.groupingBy(Application::getStatus, Collectors.counting()))
+           .forEach((s, c) -> byStatus.put(s, c));
         stats.put("byStatus", byStatus);
 
         // Count by category
         Map<String, Long> byCategory = new LinkedHashMap<>();
         for (ApplicationCategory c : ApplicationCategory.values()) {
-            long count = all.stream().filter(a -> a.getCategory() == c).count();
-            byCategory.put(c.name(), count);
+            byCategory.put(c.name(), all.stream()
+                .filter(a -> c.name().equals(a.getCategory())).count());
         }
         stats.put("byCategory", byCategory);
 
-        // Scored vs pending
-        long scored  = all.stream().filter(a -> a.getTotalMarks() != null).count();
-        long pending = all.stream().filter(a -> a.getTotalMarks() == null
-                            && a.getStatus() != ApplicationStatus.REJECTED).count();
+        long scored  = all.stream().filter(a -> a.getTotalScore() != null).count();
+        long pending = all.stream().filter(a -> a.getTotalScore() == null
+                            && !"REJECTED".equals(a.getStatus())).count();
         long flagged = all.stream().filter(Application::isFlagged).count();
         stats.put("scored",  scored);
         stats.put("pending", pending);
         stats.put("flagged", flagged);
-
         return stats;
     }
 
-    // ── Get all applications (with filters) ───────────────────
+    // ── Get all applications (with optional filters) ──────────
+
+    @Transactional(value = "appsTransactionManager", readOnly = true)
     public List<Map<String, Object>> getAllApplications(String category, String status) {
         List<Application> apps;
-
-        if (category != null && !category.isBlank()) {
-            apps = applicationRepo.findByCategory(
-                    ApplicationCategory.valueOf(category.toUpperCase()));
+        if (category != null && !category.isBlank() && status != null && !status.isBlank()) {
+            apps = appRepo.findByCategoryAndStatus(category.toUpperCase(), status.toUpperCase());
+        } else if (category != null && !category.isBlank()) {
+            apps = appRepo.findByCategory(category.toUpperCase());
         } else if (status != null && !status.isBlank()) {
-            apps = applicationRepo.findByStatus(
-                    ApplicationStatus.valueOf(status.toUpperCase()));
+            apps = appRepo.findByStatus(status.toUpperCase());
         } else {
-            apps = applicationRepo.findAll();
+            apps = appRepo.findAll();
         }
-
-        return apps.stream().map(this::toMap).toList();
+        return apps.stream().map(a -> toMap(a, true)).collect(Collectors.toList());
     }
 
-    // ── Get ranked list per category ──────────────────────────
-    public Map<String, Object> getRankedByCategory(String categoryStr) {
-        ApplicationCategory category = ApplicationCategory.valueOf(categoryStr.toUpperCase());
-        List<Application> ranked = applicationRepo.findRankedByCategory(category);
+    // ── Ranked list per category ──────────────────────────────
 
+    @Transactional(value = "appsTransactionManager", readOnly = true)
+    public Map<String, Object> getRankedByCategory(String categoryStr) {
+        List<Application> ranked = appRepo.findRankedByCategory(categoryStr.toUpperCase());
         Map<String, Object> result = new LinkedHashMap<>();
-        result.put("category",      category.name());
-        result.put("total",         ranked.size());
-        result.put("scored",        ranked.stream().filter(a -> a.getTotalMarks() != null).count());
-        result.put("applications",  ranked.stream().map(this::toMap).toList());
+        result.put("category",     categoryStr.toUpperCase());
+        result.put("total",        ranked.size());
+        result.put("scored",       ranked.stream().filter(a -> a.getTotalScore() != null).count());
+        result.put("applications", ranked.stream().map(a -> toMap(a, true)).collect(Collectors.toList()));
         return result;
     }
 
-    // ── STEP 7: Publish Results ───────────────────────────────
-    // Select top N applications per category, reject the rest
-    @Transactional
+    // ── Publish results ───────────────────────────────────────
+
+    @Transactional("appsTransactionManager")
     public Map<String, Object> publishResults(Map<String, Integer> selectionsPerCategory) {
-        int totalSelected = 0;
-        int totalRejected = 0;
+        int totalSelected = 0, totalRejected = 0;
         Map<String, Integer> summary = new LinkedHashMap<>();
 
         for (Map.Entry<String, Integer> entry : selectionsPerCategory.entrySet()) {
-            ApplicationCategory category = ApplicationCategory.valueOf(
-                    entry.getKey().toUpperCase());
-            int selectCount = entry.getValue();
+            String cat         = entry.getKey().toUpperCase();
+            int    selectCount = entry.getValue();
 
-            // Get ranked list for this category (sorted by marks DESC, distance ASC)
-            List<Application> ranked = applicationRepo.findRankedByCategory(category);
-
-            // Only consider SCORED applications (not flagged)
+            List<Application> ranked = appRepo.findRankedByCategory(cat);
             List<Application> eligible = ranked.stream()
-                    .filter(a -> a.getTotalMarks() != null && !a.isFlagged())
-                    .toList();
+                .filter(a -> a.getTotalScore() != null && !a.isFlagged())
+                .collect(Collectors.toList());
 
             int selected = 0;
             for (int i = 0; i < eligible.size(); i++) {
                 Application app = eligible.get(i);
                 if (i < selectCount) {
-                    app.setStatus(ApplicationStatus.SELECTED);
+                    app.setStatus("SELECTED");
                     app.setRankInCategory(i + 1);
                     selected++;
                 } else {
-                    app.setStatus(ApplicationStatus.REJECTED);
+                    app.setStatus("REJECTED");
                 }
-                applicationRepo.save(app);
             }
-
+            appRepo.saveAll(eligible);
             totalSelected += selected;
             totalRejected += Math.max(0, eligible.size() - selected);
-            summary.put(category.name(), selected);
+            summary.put(cat, selected);
         }
 
         Map<String, Object> result = new LinkedHashMap<>();
@@ -138,36 +134,64 @@ public class AdminService {
         return result;
     }
 
-    // ── Get all flagged applications ──────────────────────────
+    // ── Flagged applications ──────────────────────────────────
+
+    @Transactional(value = "appsTransactionManager", readOnly = true)
     public List<Map<String, Object>> getFlaggedApplications() {
-        return applicationRepo.findByStatus(ApplicationStatus.FLAGGED)
-                .stream().map(this::toMap).toList();
+        return appRepo.findByStatus("FLAGGED").stream()
+            .map(a -> toMap(a, true)).collect(Collectors.toList());
     }
 
-    // ── Override application status (admin can manually change) ─
-    @Transactional
-    public Map<String, Object> overrideStatus(Long applicationId, String newStatus) {
-        Application app = applicationRepo.findById(applicationId)
-                .orElseThrow(() -> new RuntimeException("Application not found"));
+    // ── Admin sets flag (GREEN / YELLOW / RED / null to clear) ─
 
-        ApplicationStatus status = ApplicationStatus.valueOf(newStatus.toUpperCase());
-        app.setStatus(status);
-        applicationRepo.save(app);
+    @Transactional("appsTransactionManager")
+    public Map<String, Object> setFlag(Long appId, String flagColor, String reason) {
+        Application app = appRepo.findById(appId)
+            .orElseThrow(() -> new RuntimeException("Application not found: " + appId));
 
-        Map<String, Object> result = new HashMap<>();
-        result.put("message",           "Status updated to " + newStatus);
-        result.put("applicationNumber", app.getApplicationNumber());
-        result.put("newStatus",         status.name());
-        return result;
+        if (flagColor == null || flagColor.isBlank()) {
+            app.setFlagColor(null);
+            app.setFlagReason(null);
+            app.setStatus(app.getTotalScore() != null ? "SCORED" : "UNDER_REVIEW");
+        } else {
+            String color = flagColor.trim().toUpperCase();
+            if (!List.of("GREEN", "YELLOW", "RED").contains(color))
+                throw new RuntimeException("flagColor must be GREEN, YELLOW, or RED");
+            app.setFlagColor(color);
+            app.setFlagReason(reason);
+            app.setStatus("FLAGGED");
+        }
+        appRepo.save(app);
+        return Map.of(
+            "message",   "Flag updated",
+            "flagColor", app.getFlagColor() != null ? app.getFlagColor() : "CLEARED"
+        );
     }
 
-    // ── Get all judges with their progress ────────────────────
+    // ── Manual status override ────────────────────────────────
+
+    @Transactional("appsTransactionManager")
+    public Map<String, Object> overrideStatus(Long appId, String newStatus) {
+        Application app = appRepo.findById(appId)
+            .orElseThrow(() -> new RuntimeException("Application not found: " + appId));
+        app.setStatus(newStatus.toUpperCase());
+        appRepo.save(app);
+        return Map.of(
+            "message",           "Status updated to " + newStatus,
+            "applicationNumber", app.getApplicationNumber() != null ? app.getApplicationNumber() : "",
+            "newStatus",         app.getStatus()
+        );
+    }
+
+    // ── Judge progress ────────────────────────────────────────
+
+    @Transactional(value = "appsTransactionManager", readOnly = true)
     public List<Map<String, Object>> getJudgeProgress() {
         return judgeRepo.findAll().stream().map(judge -> {
-            List<Application> assigned = applicationRepo
-                    .findByCategoryAndAssignedJudgeId(judge.getCategory(), judge.getId());
+            List<Application> assigned = appRepo.findByCategoryAndAssignedJudgeId(
+                judge.getCategory().name(), judge.getId());
             long total  = assigned.size();
-            long scored = assigned.stream().filter(a -> a.getTotalMarks() != null).count();
+            long scored = assigned.stream().filter(a -> a.getTotalScore() != null).count();
 
             Map<String, Object> m = new LinkedHashMap<>();
             m.put("id",            judge.getId());
@@ -179,11 +203,12 @@ public class AdminService {
             m.put("pending",       total - scored);
             m.put("completionPct", total > 0 ? Math.round((scored * 100.0) / total) : 0);
             return m;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
-    // ── Convert to map ────────────────────────────────────────
-    private Map<String, Object> toMap(Application a) {
+    // ── toMap ─────────────────────────────────────────────────
+
+    private Map<String, Object> toMap(Application a, boolean includeJudgeName) {
         Map<String, Object> m = new LinkedHashMap<>();
         m.put("id",                   a.getId());
         m.put("applicationNumber",    a.getApplicationNumber());
@@ -193,17 +218,20 @@ public class AdminService {
         m.put("contactNumber",        a.getContactNumber());
         m.put("district",             a.getDistrict());
         m.put("distanceFromSchoolKm", a.getDistanceFromSchoolKm());
-        m.put("category",             a.getCategory().name());
-        m.put("status",               a.getStatus().name());
-        m.put("totalMarks",           a.getTotalMarks());
+        m.put("category",             a.getCategory());
+        m.put("status",               a.getStatus());
+        m.put("totalScore",           a.getTotalScore());
         m.put("rankInCategory",       a.getRankInCategory());
-        m.put("isFlagged",            a.isFlagged());
+        m.put("flagColor",            a.getFlagColor());
         m.put("flagReason",           a.getFlagReason());
-        m.put("visitComment",         a.getVisitComment());
+        m.put("judgeComment",         a.getJudgeComment());
         m.put("dateOfBirth",          a.getDateOfBirth() != null ? a.getDateOfBirth().toString() : null);
         m.put("submittedAt",          a.getSubmittedAt() != null ? a.getSubmittedAt().toString() : null);
-        m.put("assignedJudge",        a.getAssignedJudge() != null
-                                        ? a.getAssignedJudge().getFullName() : null);
+
+        if (includeJudgeName && a.getAssignedJudgeId() != null) {
+            judgeRepo.findById(a.getAssignedJudgeId())
+                .ifPresent(j -> m.put("assignedJudge", j.getFullName()));
+        }
         return m;
     }
 }
